examples/test/testpolicy2124.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy2124
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key15: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value0
          key47: value27
      podSelector:
        matchLabels:
          key25: value32
          key4: value4
